[package]
name = "input_macro_runner"
authors = ["Aaron Tabor"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
windows = { version = "0.39.0", features = [
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_Security",
] }

serde = { version = "1.0.137", features = ["derive"] }

serde_yaml = "0.9.10"

crossbeam = "0.8.2"

anyhow = "1.0.61"

log = "0.4.17"
simple_logger = "2.2.0"
